[package]
name = "sumi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = "0.4.3"
sqlx = { version = "0.7", features = ["postgres", "runtime-async-std-native-tls"] }
bcrypt = "0.15"
serde_json = "1.0.105"
